--- a/form-janinha/html/familia.html
+++ b/form-janinha/html/familia.html
@@ -12,7 +12,7 @@
 <header>
         <h1>Espero que você faça parte da nossa vida sempre. Te amamos, Janinha!</h1>
         <a class="voltar" href="pag2.html"><i class="fas fa-arrow-circle-left"></i> Voltar</a>
-        <a href="form-janinha.html" class="sair">Sair <i class="fas fa-sign-out-alt"></i></a>
+        <a href="index.html" class="sair">Sair <i class="fas fa-sign-out-alt"></i></a>
 </header>
 <body>
         <main>
