--- a/form-janinha/html/pag2.html
+++ b/form-janinha/html/pag2.html
@@ -14,7 +14,7 @@
         <h2>
                 Aqui você encontra o diretório oficial de todos os momentos mais bonitos da Janinha.
         </h2>
-        <a href="form-janinha.html" class="sair">Sair <i class="fas fa-sign-out-alt"></i></a>
+        <a href="index.html" class="sair">Sair <i class="fas fa-sign-out-alt"></i></a>
 </header>
 <body>
         <main>
