--- a/form-janinha/html/espontaneas.html
+++ b/form-janinha/html/espontaneas.html
@@ -13,7 +13,7 @@
         <h1>Aqui você encontra as fotos mais aleatórias do dia a dia da Janinha.</h1>
         <a class="voltar" href="pag2.html"><i class="fas fa-arrow-circle-left"></i> Voltar</a>
         <a class="prox" href="modelo.html">Próxima página <i class="fas fa-arrow-circle-right"></i></a>
-        <a href="form-janinha.html" class="sair">Sair <i class="fas fa-sign-out-alt"></i></a>
+        <a href="index.html" class="sair">Sair <i class="fas fa-sign-out-alt"></i></a>
 </header>
 <body>
         <main>
