--- a/form-janinha/html/modelo.html
+++ b/form-janinha/html/modelo.html
@@ -13,7 +13,7 @@
         <h1>Vamos admirar por um momento essa beleza de parar o trânsito.</h1>
         <a class="voltar" href="pag2.html"><i class="fas fa-arrow-circle-left"></i> Voltar</a>
         <a class="prox" href="pezinhos.html">Próxima página <i class="fas fa-arrow-circle-right"></i></a>
-        <a href="form-janinha.html" class="sair">Sair <i class="fas fa-sign-out-alt"></i></a>
+        <a href="index.html" class="sair">Sair <i class="fas fa-sign-out-alt"></i></a>
 </header>
 <body>
         <main>
